# deeplearning-ai-courses

./: .gitignore  README.md  pyproject.toml  requirements.txt
02-building-systems/: l1_student.ipynb  l2_student.ipynb  l3_student.ipynb  l4_student.ipynb  l5_student.ipynb  l6_student.ipynb  l7_student.ipynb  l8_student.ipynb  utils.py
03-langchain-development/: l1_model_prompt_parser.ipynb  l3_chains.ipynb
